[package]
name = "vaultix-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
error-stack = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
chacha20poly1305 = "0.10.1"
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
argon2 = "0.5.1"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8.5"
secret-service = { version = "3.0.0", features = ["rt-tokio-crypto-rust"] }
serde_json = "1.0.108"
